# GroundTruthAligner

./: Makefile.am  NEWS  README  README.md  autogen.sh  configure.ac  dub.json
data/: 317548.tif  317548.xml  318982.tif  318982.xml  8048.tif  8048.xml  mean-variance.txt
src/: Makefile.am  config.d.in  d-support.mk
src/app/: Makefile.am  application.d
src/config/: constants.d.in  types.d
src/examples/: binarize.cc  domcreate.d  reparent.d  xmlprocess.d
src/gui/: AppWindow.d  Makefile.am  main_window.d  mainwindow.d
src/main/: Makefile.am  main.d
src/model/: Makefile.am  alignmodel.d  image-data.ods  image-data.txt  image-stats.txt  image.d  pixmap.d  xmltext.d
src/mvc/: Makefile.am  modelview.d  set.d
src/ui/: ialign.ui  images.ui
src/utils/: Makefile.am  statistic.d  test-stat.d
src/view/: mainwindow.d
